<resources>
    <string name="app_name">EduTrack</string>
    <string name="course_detail">Course Detail</string>
    <string name="detailed_course_explanation_goes_here">Detailed course explanation goes here...</string>
    <string name="click_here_for_video_or_pdf">Click here for video or PDF</string>
    <string name="course_title">Course Title</string>
    <string name="educational_courses">Educational Courses</string>
    <string name="remember_me">Remember me</string>
    <string name="email_address">Email Address</string>
    <string name="i_forget_my_password">I forget my password</string>
    <string name="medical_pathway">Medical Pathway</string>
    <string name="engineering_pathway">Engineering Pathway</string>
    <string name="todo">TODO</string>
    <string name="explore_civil_electrical_and_mechanical_fields">Explore civil, electrical, and mechanical fields.</string>
    <string name="explore_learning_methods_curriculum_and_teaching_careers">Explore learning methods, curriculum, and teaching careers.</string>
    <string name="information_technology">Information Technology</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="education_and_teaching">Education and Teaching</string>
    <string name="todo3">TODO</string>
    <string name="medical_sciences">Medical Sciences</string>
    <string name="learn_about_software_networking_and_ai">Learn about software, networking, and AI.</string>
    <string name="todo5">TODO</string>
    <string name="dive_into_medicine_nursing_and_healthcare">Dive into medicine, nursing, and healthcare.</string>
    <string name="business_and_management">Business and Management</string>
    <string name="understand_marketing_finance_and_leadership">Understand marketing, finance, and leadership.</string>
    <string name="next">Next</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="specialization_quiz">Specialization Quiz</string>
    <string name="option_1">Option 1</string>
    <string name="question_text_here">Question text here</string>
    <string name="short_description_of_the_course">Short description of the course</string>
    <string name="course_title1">Course Title</string>
    <string name="pathway_icon">Pathway Icon</string>
    <string name="pathway_title">Pathway Title</string>
    <string name="pathway_subtitle_or_description">Pathway subtitle or description</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address1">Email Address</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register1">Register</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="login">Login</string>
    <string name="sign_in_to_contnue">Sign in to contnue</string>
    <string name="register3">Register</string>
    <string name="login1">login</string>
    <string name="password1">Password</string>
    <string name="todo6">TODO</string>
    <string name="academic_and_career_pathways">Academic and Career Pathways</string>
    <string name="todo7">TODO</string>
    <string name="specialization_quiz1">Specialization Quiz</string>
    <string name="todo10">TODO</string>
    <string name="courses">Courses</string>
    <string name="my_account">My Account</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="logout">logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="student_name">Student Name</string>
    <string name="student_example_com">student@example.com</string>
    <string name="progress_75">Progress: 75%</string>
    <string name="sign_out_from_your_account">Sign out from your account</string>
    <string name="logout3">Logout</string>
    <string name="view_student_progress_and_quiz_results">View student progress and quiz results</string>
    <string name="view_students">View Students</string>
    <string name="add_update_or_delete_courses">Add, update or delete courses</string>
    <string name="manage_courses">Manage Courses</string>
    <string name="teacher_dashboard">Teacher Dashboard</string>
    <string name="logout2">Logout</string>
    <string name="welcome_teacher">Welcome, Teacher</string>
    <string name="view_students1">View Students</string>
    <string name="upload_material">Upload Material</string>
    <string name="user_type">User Type</string>
    <string name="chat">Chat</string>
    <string name="manage_courses1">Manage Courses</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="settings">Settings</string>
    <string name="upload_course">Upload Course</string>
</resources>