<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PathwaysActivity"
    android:background="#F4F6FA">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/pathwaysContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/card_engineering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/image_engineering"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_medical" />

                    <TextView
                        android:id="@+id/title_engineering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/engineering_pathway"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/explore_civil_electrical_and_mechanical_fields"
                        android:textSize="13sp"
                        android:textColor="#555555" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_it"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/image_it"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:contentDescription="@string/todo1"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_it" />

                    <TextView
                        android:id="@+id/title_it"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/information_technology"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/learn_about_software_networking_and_ai"
                        android:textSize="13sp"
                        android:textColor="#555555" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_medical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/image_medical"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:contentDescription="@string/todo3"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_medical" />

                    <TextView
                        android:id="@+id/title_medical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/medical_sciences"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/dive_into_medicine_nursing_and_healthcare"
                        android:textSize="13sp"
                        android:textColor="#555555" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/image_business"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:contentDescription="@string/todo5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_business1" />


                    <TextView
                        android:id="@+id/title_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/business_and_management"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/understand_marketing_finance_and_leadership"
                        android:textSize="13sp"
                        android:textColor="#555555" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/image_education"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:contentDescription="@string/todo2"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_education" />

                    <TextView
                        android:id="@+id/title_education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/education_and_teaching"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/explore_learning_methods_curriculum_and_teaching_careers"
                        android:textSize="13sp"
                        android:textColor="#555555" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
