<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_course_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4F6FA"
    tools:context=".CourseDetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:title="@string/course_detail"
        android:titleTextColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/tvCourseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvCourseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_course_explanation_goes_here"
                android:textSize="16sp"
                android:textColor="#333333"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/tvCourseLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here_for_video_or_pdf"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
</LinearLayout>
